--- a/index.html
+++ b/index.html
@@ -5,282 +5,233 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CoinPalestine ($PLSTN)</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
-
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
+    /* ====== RESET & BASE ====== */
+    * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: 'Poppins', sans-serif;
+      background: linear-gradient(135deg, #000000 0%, #001a26 100%);
       color: #d1d5db;
       overflow-x: hidden;
-      background: radial-gradient(circle at center, #0a0a0a 0%, #050505 100%);
-      position: relative;
     }
 
-    /* === Background Animation === */
-    .background {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-      z-index: -1;
-      background: linear-gradient(180deg, #000000 0%, #030a12 100%);
-    }
-    .background::before {
-      content: "";
-      position: absolute;
-      width: 200%;
-      height: 200%;
-      background: repeating-linear-gradient(
-        0deg,
-        rgba(0, 183, 255, 0.1) 0px,
-        rgba(0, 183, 255, 0.1) 2px,
-        transparent 2px,
-        transparent 40px
-      ),
-      repeating-linear-gradient(
-        90deg,
-        rgba(0, 183, 255, 0.1) 0px,
-        rgba(0, 183, 255, 0.1) 2px,
-        transparent 2px,
-        transparent 40px
-      );
-      animation: moveGrid 30s linear infinite;
-      transform: rotate(1deg);
-    }
-    @keyframes moveGrid {
-      from { transform: translate(0, 0) rotate(1deg); }
-      to { transform: translate(-40px, -40px) rotate(1deg); }
-    }
-
+    /* ====== HEADER ====== */
     header {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 20px 40px;
-      max-width: 1200px;
-      margin: 0 auto;
+      padding: 20px 30px;
+      color: white;
+      position: relative;
     }
-
     .logo-area {
       display: flex;
       align-items: center;
-      gap: 15px;
+      gap: 10px;
     }
-
     .logo-area img {
-      width: 60px;
-      height: 60px;
+      width: 55px;
+      height: 55px;
       border-radius: 50%;
-      border: 2px solid #00b7ff;
-      box-shadow: 0 0 20px #00b7ff66;
+      box-shadow: 0 0 15px #00b7ff;
     }
-
     .brand h1 {
-      margin: 0;
+      font-size: 1.3rem;
       color: white;
-      font-size: 1.4rem;
     }
-
     .brand span {
       color: #00b7ff;
     }
 
-    nav a {
+    /* ====== MENU BUTTON ====== */
+    .menu-btn {
+      font-size: 2rem;
       color: #00b7ff;
-      text-decoration: none;
-      border: 1px solid #00b7ff;
-      padding: 8px 16px;
-      border-radius: 6px;
-      margin-left: 10px;
-      transition: background 0.3s, box-shadow 0.3s;
+      cursor: pointer;
+      transition: 0.3s;
     }
+    .menu-btn:hover { color: white; }
 
-    nav a:hover {
-      background-color: #00b7ff33;
-      box-shadow: 0 0 10px #00b7ff;
+    /* ====== SIDEBAR ====== */
+    .sidebar {
+      position: fixed;
+      top: 0;
+      right: -260px;
+      width: 260px;
+      height: 100%;
+      background: rgba(15, 20, 25, 0.98);
+      box-shadow: -2px 0 10px #00b7ff33;
+      transition: right 0.4s ease;
+      z-index: 999;
+      padding: 25px;
     }
-
-    main {
-      max-width: 1200px;
-      margin: 40px auto;
-      padding: 0 20px;
+    .sidebar.active { right: 0; }
+    .sidebar .close-btn {
+      font-size: 1.5rem;
+      color: #00b7ff;
+      cursor: pointer;
+      position: absolute;
+      top: 20px;
+      left: 20px;
+    }
+    .sidebar .logo-box {
       text-align: center;
+      margin-top: 50px;
     }
-
-    .coin-img {
-      width: 220px;
-      height: 220px;
-      margin: 30px auto;
+    .sidebar .logo-box img {
+      width: 70px;
+      height: 70px;
       border-radius: 50%;
-      box-shadow: 0 0 40px #00b7ff99;
-      border: 1px solid #00b7ff66;
-      object-fit: cover;
-    }
-
-    h2 {
-      color: white;
-      font-size: 2.2rem;
-    }
-
-    .tokenomics, .about, .community {
-      background: #11151a;
-      border: 1px solid #00b7ff22;
-      border-radius: 12px;
-      padding: 20px;
-      margin: 30px auto;
-      max-width: 800px;
-      text-align: left;
-      box-shadow: 0 0 10px #00b7ff11;
-    }
-
-    .tokenomics h3, .about h3, .community h3 {
-      color: #00b7ff;
-    }
-
-    /* === Social Section === */
-    .social-section {
-      max-width: 1000px;
-      margin: 60px auto;
-      padding: 30px 20px;
-      background: #11151a;
-      border: 1px solid #00b7ff22;
-      border-radius: 12px;
-      box-shadow: 0 0 20px #00b7ff22;
-    }
-
-    .social-section h3 {
-      color: #00b7ff;
-      text-align: center;
-      font-size: 1.8rem;
-      margin-bottom: 20px;
-    }
-
-    .social-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-      gap: 20px;
-      justify-items: center;
-    }
-
-    .social-card {
-      background: #0f1419;
-      border: 1px solid #00b7ff33;
-      border-radius: 10px;
-      padding: 20px;
-      text-align: center;
-      transition: all 0.3s;
-      width: 100%;
-    }
-
-    .social-card:hover {
-      background: #00b7ff11;
-      box-shadow: 0 0 20px #00b7ff66;
-      transform: translateY(-5px);
-    }
-
-    .social-card img {
-      width: 40px;
-      height: 40px;
+      box-shadow: 0 0 25px #00b7ff;
       margin-bottom: 10px;
     }
-
-    .social-card a {
+    .sidebar .logo-box h2 {
+      font-size: 1.1rem;
       color: #00b7ff;
-      text-decoration: none;
-      font-weight: 500;
+    }
+    .sidebar hr {
+      border: 0;
+      height: 1px;
+      background: #00b7ff33;
+      margin: 20px 0;
+    }
+    .sidebar a {
       display: block;
+      color: #d1d5db;
+      text-decoration: none;
+      margin: 10px 0;
+      font-size: 1rem;
+      transition: 0.3s;
+    }
+    .sidebar a:hover {
+      color: #00b7ff;
+      text-shadow: 0 0 10px #00b7ff;
     }
 
+    /* ====== MAIN SECTION ====== */
+    main {
+      text-align: center;
+      padding: 50px 20px;
+    }
+    .coin-img {
+      width: 180px;
+      height: 180px;
+      border-radius: 50%;
+      margin: 20px auto;
+      box-shadow: 0 0 40px #00b7ff55;
+    }
+    h2 {
+      color: white;
+      font-size: 2rem;
+      margin-top: 10px;
+    }
+    p {
+      max-width: 600px;
+      margin: 15px auto;
+      font-size: 1rem;
+      color: #9ca3af;
+    }
+    .buttons {
+      margin-top: 30px;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 15px;
+    }
+    .buttons a {
+      background: transparent;
+      border: 1px solid #00b7ff;
+      padding: 10px 20px;
+      border-radius: 8px;
+      color: #00b7ff;
+      text-decoration: none;
+      transition: 0.3s;
+    }
+    .buttons a:hover {
+      background: #00b7ff33;
+      box-shadow: 0 0 15px #00b7ff55;
+    }
+
+    /* ====== FOOTER ====== */
     footer {
       text-align: center;
       padding: 30px;
-      font-size: 0.9rem;
       color: #9ca3af;
+      font-size: 0.9rem;
+      border-top: 1px solid #00b7ff22;
     }
 
+    /* ====== RESPONSIVE ====== */
+    @media (max-width: 768px) {
+      .brand h1 { font-size: 1rem; }
+      .coin-img { width: 150px; height: 150px; }
+    }
   </style>
 </head>
-<body>
-  <div class="background"></div>
 
+<body>
   <header>
     <div class="logo-area">
       <img src="logo.png" alt="CoinPalestine Logo" />
       <div class="brand">
         <h1>CoinPalestine <span>$PLSTN</span></h1>
-        <p style="margin:0; font-size:0.9rem; color:#9ca3af">Freedom • Unity • Innovation</p>
       </div>
     </div>
-    <nav>
-      <a href="https://t.me/coin_Palestine" target="_blank">Telegram</a> 
-      <a href="https://x.com/coin_Palestine1" target="_blank">X / Twitter</a>
-    </nav>
+    <div class="menu-btn" onclick="toggleSidebar()">☰</div>
   </header>
 
+  <!-- ====== SIDEBAR MENU ====== -->
+  <div class="sidebar" id="sidebar">
+    <div class="close-btn" onclick="toggleSidebar()">✖</div>
+    <div class="logo-box">
+      <img src="logo.png" alt="Logo" />
+      <h2>CoinPalestine ($PLSTN)</h2>
+    </div>
+    <hr />
+    <a href="#">🏠 Home</a>
+    <a href="#">🗺️ Roadmap</a>
+    <a href="whitepaper.pdf" target="_blank">📄 Whitepaper (Soon)</a>
+    <hr />
+    <h3 style="color:#00b7ff;">🌐 Community Links</h3>
+    <a href="https://t.me/coin_Palestine" target="_blank">Telegram</a>
+    <a href="https://x.com/coin_Palestine1?t=Rwf5YonWx3xKS7prCYs_Aw&s=09" target="_blank">X / Twitter</a>
+    <a href="https://www.instagram.com/coin_palestine1" target="_blank">Instagram</a>
+    <a href="https://discord.gg/H9NPdQQJ2" target="_blank">Discord</a>
+    <hr />
+    <a href="mailto:coinpalestine.team@gmail.com">💬 Contact Support</a>
+  </div>
+
+  <!-- ====== MAIN CONTENT ====== -->
   <main>
     <img src="logo.png" class="coin-img" alt="PLSTN Coin" />
     <h2>CoinPalestine <span style="color:#00b7ff">($PLSTN)</span></h2>
-    <p>The official token of Palestine — built on <strong style="color:#00b7ff">#Polygon</strong> for freedom, unity, and innovation. Powered by people. 💫</p>
-
-    <div class="tokenomics">
-      <h3>Tokenomics</h3>
-      <ul>
-        <li>Total Supply: <strong>1,000,000,000 PLSTN</strong></li>
-        <li>Initial Liquidity: <strong>40%</strong></li>
-        <li>Team & Dev: <strong>10% (locked)</strong></li>
-        <li>Marketing & Community: <strong>10%</strong></li>
-        <li>Airdrop & Partnerships: <strong>10%</strong></li>
-        <li>Reserve: <strong>20%</strong></li>
-      </ul>
-    </div>
-
-    <div class="about">
-      <h3>About</h3>
-      <p>CoinPalestine ($PLSTN) represents solidarity, freedom, and community-driven innovation. Built on Polygon for low fees and fast settlement, PLSTN aims to empower contributors and supporters worldwide.</p>
-    </div>
-
-    <!-- === Social Links Section === -->
-    <div class="social-section">
-      <h3>Join Our Community</h3>
-      <div class="social-grid">
-        <div class="social-card">
-          <img src="https://cdn-icons-png.flaticon.com/512/2111/2111646.png" alt="Telegram">
-          <a href="https://t.me/coin_Palestine" target="_blank">Telegram</a>
-        </div>
-        <div class="social-card">
-          <img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="Twitter">
-          <a href="https://x.com/coin_Palestine1" target="_blank">X / Twitter</a>
-        </div>
-        <div class="social-card">
-          <img src="https://cdn-icons-png.flaticon.com/512/2111/2111370.png" alt="Discord">
-          <a href="https://discord.gg/H9NPdQQJ2" target="_blank">Discord</a>
-        </div>
-        <div class="social-card">
-          <img src="https://cdn-icons-png.flaticon.com/512/1384/1384063.png" alt="Instagram">
-          <a href="https://www.instagram.com/coin_palestine1" target="_blank">Instagram</a>
-        </div>
-        <div class="social-card">
-          <img src="https://cdn-icons-png.flaticon.com/512/841/841364.png" alt="Website">
-          <a href="https://alexander1717807.github.io/CoinPalestine-PLSTN/" target="_blank">Official Website</a>
-        </div>
-        <div class="social-card">
-          <img src="https://cdn-icons-png.flaticon.com/512/732/732200.png" alt="Email">
-          <a href="mailto:coinpalestine.team@gmail.com">coinpalestine.team@gmail.com</a>
-        </div>
-      </div>
+    <p>
+      The official token of freedom, unity, and innovation — built on <strong style="color:#00b7ff;">Polygon</strong>.  
+      Join the movement and be part of the future.
+    </p>
+    <div class="buttons">
+      <a href="https://polygonscan.com/token/0x6164917fbf20a2ab137e24bac46a8cbe418cdfa2" target="_blank">🔗 View on PolygonScan</a>
+      <a href="https://t.me/coin_Palestine" target="_blank">🚀 Join the Community</a>
     </div>
   </main>
 
   <footer>
-    <p>© 2025 CoinPalestine — All rights reserved.</p>
-    <p>Made with ❤️ • Built for the people.</p>
+    <p>© 2025 CoinPalestine — Built for the People.</p>
   </footer>
+
+  <script>
+    const sidebar = document.getElementById('sidebar');
+    function toggleSidebar() {
+      sidebar.classList.toggle('active');
+    }
+
+    // Allow swipe from right on mobile
+    let startX;
+    document.addEventListener('touchstart', e => startX = e.touches[0].clientX);
+    document.addEventListener('touchend', e => {
+      const endX = e.changedTouches[0].clientX;
+      if (startX > window.innerWidth - 50 && endX < startX - 40) toggleSidebar();
+      if (sidebar.classList.contains('active') && endX > startX + 40) toggleSidebar();
+    });
+  </script>
 </body>
-      </html>
+</html>
